<resources>
    <string name="app_name">3634Assignment</string>
    <string name="course_details">Course Details</string>
    <string name="studbud">StudBud</string>
    <string name="splash_des">Where Learning Happens</string>
    <string name="app_logo">App Logo</string>
    <string name="log_in_btn">Log In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="course">C o u r s e s</string>
    <string name="learn_btn">Start Learning Now</string>
    <string name="homepage_des">Learn Everything About Finance</string>
    <string name="quiz">Q u i z</string>
    <string name="quiz_des">Test Yourself</string>
    <string name="quiz_btn">Start Quiz</string>
    <string name="profile_button">Profile Button</string>
    <string name="new_account_btn">Create New Account</string>
    <string name="sing_up_email">Please Enter Your Email</string>
    <string name="profile_page">Profile</string>
    <string name="user_email">User Email</string>
    <string name="log_out_btn">Log Out</string>
    <string name="course_name">Course Name</string>
    <string name="course_des">Course Description</string>
    <string name="image_badges">Badges</string>
    <string name="overview">Overview</string>
    <string name="vid_des_topic">What to expect?</string>
    <string name="vid_des_1">To make learning more effective and interesting, StudBud has avoided using standard textbook materials but instead provides digital learning content to inspire and engage students.</string>
    <string name="vid_des_2">Each topic will be provided with videos for you to watch, once you feel like you’ve understand the topic challenge yourself with the Quiz provided by StudBud.</string>
    <string name="vid_des_topic_2">Let\'s Get Started</string>
    <string name="vid_savings_name">Saving vs Investing</string>
    <string name="vid_start_btn">Start</string>
    <string name="vid_fiscal_name">Fiscal Policy</string>
    <string name="vid_labour_name">Labour Market</string>
    <string name="TEST">Test</string>
    <string name="email_icon">email_icon</string>
    <string name="password_icon">password_icon</string>
    <string name="quiz_nospace">Quiz</string>
    <string name="back_to_main">Back To Main</string>
    <string name="quiz_page_des">Choose a topic and challenge yourself!</string>
</resources>
