<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/home_page">

    <TextView
        android:id="@+id/studBud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/studbud"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:text="@string/course"
        android:textSize="36sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studBud" />

    <Button
        android:id="@+id/learn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#6030393f"
        android:padding="8dp"
        android:text="@string/learn_btn"
        app:layout_constraintBottom_toTopOf="@+id/quiz_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/course_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/homepage_des"
        android:textColor="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/learn_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <TextView
        android:id="@+id/quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/quiz"
        android:textSize="36sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learn_btn" />

    <TextView
        android:id="@+id/quiz_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quiz_des"
        android:textColor="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/quiz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="16dp"
        android:background="#6030393f"
        android:text="@string/quiz_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course"
        app:layout_constraintVertical_bias="0.564" />

    <ImageButton
        android:id="@+id/profileBtn"
        android:layout_width="75dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#1030393f"
        android:contentDescription="@string/profile_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_login" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="103dp"
        android:layout_height="120dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toStartOf="@+id/studBud"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo_ver2" />


</android.support.constraint.ConstraintLayout>