<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/courselist_back">

        <ImageView
            android:id="@+id/course_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_badges"
            android:paddingBottom="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/course_name"
            android:textSize="24sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/course_image"
            app:layout_constraintTop_toTopOf="@+id/course_image" />

        <TextView
            android:id="@+id/short_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/course_des"
            android:textColor="#76787a"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/course_name"
            app:layout_constraintStart_toStartOf="@+id/course_name"
            app:layout_constraintTop_toBottomOf="@+id/course_name" />
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>