<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage"
    android:background="@drawable/profile_page">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/studbud"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_page"
        android:textSize="30sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/user_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/log_out_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

    <FrameLayout
        android:id="@+id/saving_badge_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:elevation="10dp"
        android:background="#d1ebba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_out_btn">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/badge_saving" />

        <TextView
            android:layout_width="241dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="Smart Saver"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/labour_badge_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:elevation="10dp"
        android:background="#ded1f2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saving_badge_wrap">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/badge_labour" />

        <TextView
            android:layout_width="241dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="Market Analyser"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fiscal_badge_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:elevation="10dp"
        android:background="#dfe39f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labour_badge_wrap">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:background="@drawable/badge_fiscal"/>

        <TextView
            android:layout_width="241dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="Economist"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>